Fri Sep  6 10:23:31 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/tests.mpc:
          Added ACE_AS_STATIC_LIBS to static_flags for 2980

Thu Sep  5 07:53:19 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_netdb.cpp:
        * ace/UUID.cpp:
        * ace/config-android.h:
        * bin/PerlACE/ProcessAndroid.pm:
        * include/makeinclude/platform_android.GNU:
        * tests/run_test.pl:
        * tests/tests.mpc:
          Improvements for the Android port, in detail:

          commit 171a851ebe98b58ed4654956833ee1bfd17961a4
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Wed Sep 4 19:30:40 2013 +0200

                    Run all ACE tests within one emulator
                  * ACE/tests/run_test.pl:

          commit f634cead8e84de9320f7626d1fda1fec4fc579ac
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Wed Sep 4 14:22:00 2013 +0200

                    Added a check for gcc 4.4 && shared libraries, issue
                    an error when someone wants to use this
                  * ACE/ace/config-android.h:

          commit f1c393872e241d5bc9737b34e1ed10f9288fed17
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Tue Sep 3 19:47:59 2013 +0200

                    Removed incorrect define
                  * ACE/ace/config-android.h:

          commit 9f7d4fffee0e527bfdf87378e89c703df1cf124d
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Tue Sep 3 15:03:40 2013 +0200

                    Set ACE_DEFAULT_TEST_DIR and TEST_DIR to /data on Android
                  * ACE/ace/config-android.h:

          commit 856266b58ef37236e8e79caa9472a93251c9a8d7
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Tue Sep 3 12:14:42 2013 +0200

                    3912 also needs a conf file
                  * ACE/tests/run_test.pl:

          commit 4cea1a7df2840a4409d0e1212667741d27b25125